--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
-    <link href="http://imgur.com/41fhKLR.png" rel="icon>
+    <link href="http://imgur.com/41fhKLR.png" rel="icon">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
