--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </button>
                 <img src="http://imgur.com/41fhKLR.png" width="40px" height="40px" style="margin-top: 5px;">
                 <a class="navbar-brand page-scroll" href="#page-top">
-                     <span class="light">Wilgenhof</span> Huisdans
+                    <span class="light">Wilgenhof</span> Huisdans
                 </a>
             </div>
 
@@ -75,8 +75,8 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">You are invited</h1>
-                        <p class="intro-text">29 July
-                    <br />18:30 for 19:00</p>
+                        <p class="intro-text">Saturday, 29 July
+                            <br />18:30 for 19:00</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -90,8 +90,12 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h1 style="font-size:80px;">Wilgenhof Huisdans</h1>
-                <h2>Theme: <b>Gentlemen's club</b></h2>
+                <h2 style="font-size:80px;">Wilgenhof Huisdans</h2>
+                <h3>Theme: <b>Gentlemen's club</b></h3>
+                <video width="320" height="240" controls>
+  <source src="img/Huisdans%20video%20LESS.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
             </div>
         </div>
     </section>
@@ -103,7 +107,7 @@
                 <h2>Contact</h2>
                 <p>For more information:</p>
                 <p>Reece Lourens
-                <a href="tel:+27 82 387 6827" class="btn btn-default btn-lg"><i class="fa fa-phone fa-fw"></i> <span class="network-name">+27 82 387 6827</span></a></p>
+                    <a href="tel:+27 82 387 6827" class="btn btn-default btn-lg"><i class="fa fa-phone fa-fw"></i> <span class="network-name">+27 82 387 6827</span></a></p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
                         <a href="https://twitter.com/Willows1903" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
