--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <h2 style="font-size:80px;">Wilgenhof Huisdans</h2>
                 <h3>Theme: <b>Gentlemen's club</b></h3>
                 <video width="320" height="240" controls>
-  <source src="img/Huisdans%20video%20LESS.mp4" type="video/mp4">
+  <source src="img/Huisdans%20Video%20LESS.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
             </div>
